Use "new" HSV algorithm in the brush option

The "new" algorithm in more stable and gives a bit more expected
results. The patch changes the algorithm unconditionally.
Theoretically, we might want to make it configurable, but
I don't really want to overload teh already complicated GUI.

BUG:462193