plugins/paintops/libpaintop/KisHSVOption.cpp
@@ -54,6 +54,15 @@ void KisHSVOption::apply(KoColorTransformation* transfo, const KisPaintInformati
     transfo->setParameter(m_paramId, v);
     transfo->setParameter(3, 0); //sets the type to HSV.
     transfo->setParameter(4, false); //sets the colorize to false.
+
+    /**
+     * Theoretically, we might want to make this a user-selectable
+     * option, but I doubt anyone would complain. See details in the
+     * bugreport:
+     *
+     * https://bugs.kde.org/show_bug.cgi?id=462193
+     */
+    transfo->setParameter(8, false); //sets the compatibility to false.
 }
 
 template <typename Data>
